# PhotoBatch

./: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  ConvertMode.cpp  ConvertMode.h  Mode.cpp  Mode.h  PhotoBatch.cpp  README.md  RenameMode.cpp  RenameMode.h  ResizeMode.cpp  ResizeMode.h  ScaleMode.cpp  ScaleMode.h  Utils.cpp  Utils.h
